apps/production/homarr/velero_backup_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
spec:
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: homarr-appdata
